my_camera_publisher/log/build_2024-07-22_10-11-58/my_camera_publisher/stderr.log
  File "/home/hikmal/my_camera_publisher/install/my_camera_publisher/lib/python3.10/site-packages/my_camera_publisher/my_camera_publisher.py", line 35
    ret, frame = self.cap.read(/dev/video2)
                               ^
SyntaxError: invalid syntax

